# plugin_binding_demo

./: .gitattributes  .gitignore  README.md  analysis_options.yaml  audio_jnigen.yaml  ble_ios.yaml  ble_jnigen.yaml  jnigen.yaml  opencv_ffigen.yaml  pubspec.yaml  regen_all.sh
android/: settings.gradle.kts
android/app/: CMakeLists.txt  build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/plugin_binding_demo/: BluetoothGattCallbackProxy.kt  MainActivity.kt
android/sdk/: build.gradle
c_module/: CMakeLists.txt
ios/: core_bluetooth.dart.m
ios/Runner/: AppDelegate.swift  Info.plist  OpenCVWrapper.h  OpenCVWrapper.mm  PrefixHeader.pch  Runner-Bridging-Header.h  opencv_wrapper.cpp  opencv_wrapper.h
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  audio_jni.dart  ble_jni.dart  core_bluetooth.dart  global_data.dart  home_screen.dart  main.dart  metric.dart  open_cv_c.dart  open_cv_jni.dart
lib/c_ffi/: c_ffi_screen.dart
lib/common/: marker_painter.dart  performance_table.dart  pixels_die_info.dart
lib/ffi/: c_ffi_screen.dart  ios_ffigen_ble.dart  jni_gen_ble.dart  jni_gen_ffi_screen.dart
lib/method_channels/: method_channels_screen.dart  open_cv_method_channels_screen.dart
tools/pull_json/: README.md  analysis_options.yaml  pubspec.yaml
